--- a/codes/www/drag-the-box/style.css
+++ b/codes/www/drag-the-box/style.css
@@ -46,12 +46,14 @@ body {
     }
 
     .box {
-        width: 30vw;
-        height: 15vh;
+        width: 10vw;
+        height: 5vh;
          /* Disable default touch behaviors */
     }
 
     .coord-display {
-        font-size: 12px;
+        margin-top: 30px;
+        margin-left: -29;
+        font-size: 10px;
     }
 }
